<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="day_rating">Day Rating</string>
    <string name="majors">Majors</string>
    <string name="minors">Minors</string>
    <string name="prev_day">Previous Day</string>
    <string name="next_day">Next Day</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="error_msg">Something went wrong. Please try again.</string>
    <string name="location_permission_rationale">To get solunar times based on your current location, you need to enable your location permission.</string>
    <string name="no_location_permission_msg">Enable your location permission and turn on your location so that we can get solunar times for your current location.</string>
    <string name="turn_on_location_desc">Turn on your location so that we can get solunar times for your current location.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="ok">Ok</string>
    <string name="permission_required">Permission required</string>
    <string name="select_location_msg">Long press anywhere on the map to select a location.</string>
    <string name="get_location_prompt">To get solunar times, set your location:</string>
    <string name="select_location">Select Location</string>
    <string name="select_a_location">Select a Location</string>
    <string name="get_current_location">Get Current Location</string>
    <string name="gps_coordinates">(%s, %s)</string>
    <string name="long_click_to_cancel">Long click to cancel</string>
    <string name="cancel">Cancel</string>
    <string name="location_name">Location name</string>
    <string name="date">Date</string>
    <string name="major_one">Major one</string>
    <string name="major_two">Major two</string>
    <string name="minor_one">Minor one</string>
    <string name="minor_two">Minor two</string>
    <string name="error_text">Error Text</string>
    <string name="loading">Loading</string>
    <string name="edit_location">Edit Location</string>
    <string name="select_location_on_map">Select a location on the map</string>
    <string name="dont_allow">Don\'t allow</string>
</resources>